syntax = "proto3";
package sifnode.whitelist.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "sifnode/whitelist/v1/types.proto";

option go_package = "github.com/Sifchain/sifnode/x/whitelist/types";

// Query defines the gRPC querier service.
service Query {
  rpc Denoms(QueryDenomsRequest) returns (QueryDenomsResponse) {
    option (google.api.http).get = "/sifchain/whitelist/v1beta1/denoms";
  }
}

message QueryDenomsResponse {
    DenomWhitelist list = 1;
}
message QueryDenomsRequest {}